# exercice_recommender

./: .gitignore  README.md  pyproject.toml  recommender.py
